--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,9 @@
 body {
     background-color: #094afe;
     color: white;
-
+    font-family: 'Jua', sans-serif;
 }
-font-family: 'Jua', sans-serif;
+
+.card-body {
+    color: black;
+}
