--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,7 @@
 body {
-    background-color: #094afe;
+    background-color: #ff1c1c;
     color: white;
+    text-shadow: 0 0 5px black;
     font-family: 'Jua', sans-serif;
 }
 
