--- a/assets/style.css
+++ b/assets/style.css
@@ -1,12 +1,17 @@
 body {
-    background-color: #ff1c1c;
+    background-image: url("https://backgroundcheckall.com/wp-content/uploads/2017/12/pokemon-background-pokeball-1.png");
+    background-size: cover;
+    background-repeat: no-repeat;
     color: white;
-    font-family: 'Jua', sans-serif;
+    font-family: 'Orbitron', sans-serif;
+    font-weight: bold;
+    text-shadow: 0 2px 5px black
 }
 
 .card-body {
     color: black;
     box-shadow: 0 2px 10px black;
+    text-shadow: none;
 }
 
 #api-pokemon {
